src/components/orders-table/list-order-details.scss
@use '@carbon/colors';
@use '@carbon/layout';
@use '@carbon/type';
@use '@openmrs/esm-styleguide/src/vars' as *;

.buttonSection {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  padding-top: layout.$spacing-01;
  width: 100%;
  margin-left: layout.$spacing-03;
}

.testsOrderedActions {
  margin-left: auto;
  display: flex;
  padding-right: 1rem;
}

.menuLink {
  display: inline-flex;
}

.orderDetailsContainer {
  width: 80%;
  display: flex;
  flex-direction: column;
  padding: layout.$spacing-03;
  margin-left: layout.$spacing-07;
  background-color: colors.$white-0;
  margin: layout.$spacing-03 0;
}

.orderDetailsRow {
  &:first-child {
    border-top: none !important;
  }
}

.orderDetailsWrapper {
  :global(.cds--structured-list-td) {
    padding: 0.5rem 0.5rem 0.5rem !important;
  }
}

.orderDetailsTextBold {
  font-weight: bold;
}

.labResultSlot {
  text-align: center;
  margin-bottom: layout.$spacing-03;
}

.accordionTitle {
  font-weight: bold;
}

.instructionLabelContainer {
  display: flex;
  align-items: center;
  justify-content: center;
}

.priorityPill {
  @include type.type-style('label-01');
  display: inline-block;
  background-color: colors.$gray-20;
  border-radius: layout.$spacing-05;
  padding: layout.$spacing-01;
  text-align: center;

  &[data-urgency='routine'] {
    background-color: colors.$orange-20;
  }

  &[data-urgency='on scheduled date'] {
    background-color: colors.$red-20;
  }
}

.statusPill {
  @include type.type-style('label-01');
  display: inline-block;
  background-color: colors.$gray-20;
  border-radius: layout.$spacing-03;
  padding: layout.$spacing-01;
  padding-inline: layout.$spacing-03;
  text-align: center;

  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;

  &[data-status='received'] {
    background-color: colors.$blue-20;
  }

  &[data-status='in progress'] {
    background-color: colors.$cyan-20;
  }

  &[data-status='on hold'] {
    background-color: colors.$teal-20;
  }

  &[data-status='exception'] {
    background-color: colors.$magenta-20;
  }

  &[data-status='completed'] {
    background-color: colors.$green-20;
  }

  &[data-status='discontinued'],
  &[data-status='declined'] {
    background-color: colors.$red-20;
  }
}

